[tool.poetry]
name = "dalle3"
version = "0.1.0"
description = ""
authors = ["David Lo <davidlo@hkpc.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.32.2"
openai = "1.12.0"
requests = "^2.32.3"
pillow = "^10.4.0"
python-dotenv = "1.0.0"
msal = "1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
